[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/mainscene.gd" type="Script" id=1]
[ext_resource path="res://Fonts/pixelFont.tres" type="DynamicFont" id=2]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
hinting = 0
font_path = "res://Fonts/Pixeltype.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="GridContainer" parent="Panel/ScrollContainer"]
margin_right = 262.0
margin_bottom = 226.0
columns = 3

[node name="Filler3" type="Panel" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 78.0
margin_bottom = 16.0

[node name="Play" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 82.0
margin_right = 160.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Filler4" type="Panel" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 164.0
margin_right = 262.0
margin_bottom = 16.0

[node name="HBoxCont_UP" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 78.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_UP"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Up"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_UP"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_DOWN" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 82.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_DOWN"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Down"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_DOWN"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_LEFT" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 164.0
margin_top = 20.0
margin_right = 262.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_LEFT"]
margin_right = 98.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Left"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_LEFT"]
margin_top = 14.0
margin_right = 98.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_RIGHT" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 78.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_RIGHT"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Right"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_RIGHT"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_INTERACT" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 82.0
margin_top = 54.0
margin_right = 160.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_INTERACT"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Interact"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_INTERACT"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_FIRSTABILITY" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 164.0
margin_top = 54.0
margin_right = 262.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_FIRSTABILITY"]
margin_right = 98.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Sword Ability"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_FIRSTABILITY"]
margin_top = 14.0
margin_right = 98.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_SECONDABILITY" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 78.0
margin_bottom = 118.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_SECONDABILITY"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Dash Ability"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_SECONDABILITY"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_FIRSTITEM" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 82.0
margin_top = 88.0
margin_right = 160.0
margin_bottom = 118.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_FIRSTITEM"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "First Item"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_FIRSTITEM"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_SECONDITEM" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 164.0
margin_top = 88.0
margin_right = 262.0
margin_bottom = 118.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_SECONDITEM"]
margin_right = 98.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Second Item"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_SECONDITEM"]
margin_top = 14.0
margin_right = 98.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_THIRDITEM" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 78.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_THIRDITEM"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Third Item"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_THIRDITEM"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="HBoxCont_BACK" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 82.0
margin_top = 122.0
margin_right = 160.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_BACK"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Back/Pause"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxCont_BACK"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 0

[node name="VBoxCont_QUCKUSE" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 164.0
margin_top = 122.0
margin_right = 262.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VBoxCont_QUCKUSE"]
margin_right = 98.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 2 )
text = "Quick Use"

[node name="QuickUse" type="Button" parent="Panel/ScrollContainer/VBoxContainer/VBoxCont_QUCKUSE"]
margin_top = 14.0
margin_right = 98.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true

[node name="Filler" type="Panel" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 78.0
margin_bottom = 172.0

[node name="Fullscreen" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 82.0
margin_top = 156.0
margin_right = 160.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Fullscreen"

[node name="Filler2" type="Panel" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 164.0
margin_top = 156.0
margin_right = 262.0
margin_bottom = 172.0

[node name="mainVolume" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 78.0
margin_bottom = 206.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/mainVolume"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Main Volume"

[node name="HSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/mainVolume"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
value = 77.0

[node name="musicVolume" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 82.0
margin_top = 176.0
margin_right = 160.0
margin_bottom = 206.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/musicVolume"]
margin_right = 78.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/musicVolume"]
margin_top = 14.0
margin_right = 78.0
margin_bottom = 30.0
value = 67.0

[node name="soundEffectVolume" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 164.0
margin_top = 176.0
margin_right = 262.0
margin_bottom = 206.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/soundEffectVolume"]
margin_right = 98.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Sound Effect Volume"

[node name="HSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/soundEffectVolume"]
margin_top = 14.0
margin_right = 98.0
margin_bottom = 30.0
value = 77.0

[node name="SaveSettings" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 78.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 2 )
text = "Save Settings"

[node name="LoadSettings" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 82.0
margin_top = 210.0
margin_right = 160.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 2 )
text = "Load Settings"

[node name="QuitGame" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_left = 164.0
margin_top = 210.0
margin_right = 262.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 2 )
text = "Quit Game"
[connection signal="button_down" from="Panel/ScrollContainer/VBoxContainer/Play" to="." method="startGame"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_UP/Button" to="." method="b_change_key_UP"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_DOWN/Button" to="." method="b_change_key_DOWN"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_LEFT/Button" to="." method="b_change_key_LEFT"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_RIGHT/Button" to="." method="b_change_key_RIGHT"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_INTERACT/Button" to="." method="b_change_key_INTERACT"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_FIRSTABILITY/Button" to="." method="b_change_key_FIRSTABILITY"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_SECONDABILITY/Button" to="." method="b_change_key_SECONDABILITY"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_FIRSTITEM/Button" to="." method="b_change_key_FIRSTITEM"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_SECONDITEM/Button" to="." method="b_change_key_SECONDITEM"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_THIRDITEM/Button" to="." method="b_change_key_THIRDITEM"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxCont_BACK/Button" to="." method="b_change_key_BACK"]
[connection signal="toggled" from="Panel/ScrollContainer/VBoxContainer/VBoxCont_QUCKUSE/QuickUse" to="." method="quickUseChanged"]
[connection signal="toggled" from="Panel/ScrollContainer/VBoxContainer/Fullscreen" to="." method="fullscreenToggle"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/mainVolume/HSlider" to="." method="mainVolChanged"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/musicVolume/HSlider" to="." method="musicVolChanged"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/soundEffectVolume/HSlider" to="." method="soundEffectVolChanged"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/SaveSettings" to="." method="saveSettings"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/LoadSettings" to="." method="loadSettings"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/QuitGame" to="." method="quitGame"]
